# hooshek

./: .gitignore  LICENSE  README.md  athletes.py  clubs.py  event.py  export_slcr.py  finish.py  numerate.py  pyproject.toml  register.py  requirements.txt  start.py  test.py  todo
.github/actions/setup-uv/: action.yml
.github/workflows/: ci.yml  test.yml
athletes/: __init__.py  athlete.py  io.py
clubs/: club.py  io.py
event/: __init__.py  event.py  io.py  race.py
finish/: __init__.py  category.py  io.py
persistence/: csv.py  json.py  termtables.py  yaml.py
start/: __init__.py  io.py
test/resources/2020-skuhrovska-lyze/: athletes-sorted.yaml  athletes.yaml  clubs.yaml  event.yaml  finish.yaml  results.txt  results.yaml  start-clubs.txt  start.txt  start.yaml
test/resources/2020-skuhrovska-steeplechase/: athletes-sorted.yaml  athletes-with-numbers.yaml  athletes-without-numbers.yaml  athletes.csv  athletes.yaml  clubs.yaml  event.yaml  finish.yaml  results.txt  results.yaml  start-clubs.txt  start.txt  start.yaml
test/resources/2021-skuhrovska-steeplechase/: athletes-sorted.yaml  athletes.yaml  clubs.yaml  event.yaml  finish.yaml  results.txt  results.yaml  start-clubs.txt  start.txt  start.yaml
test/resources/2022-skuhrovska-lyze/: athletes.yaml  clubs.yaml  event.yaml  finish.yaml  results.txt  results.yaml  start.txt  start.yaml
test/resources/2025-setkani-mistru/: athletes.yaml  clubs.yaml  event.yaml  finish.yaml  results.txt  results.yaml  slcr-export.json  start-clubs.txt  start.txt  (+1 more)
tests/: conftest.py  test_athletes.py
util/: util.py
(+10 files in other folders)
