[project]
name = "hooshek"
version = "2.0"
description = "A CLI application for managing time based sport competitions"
authors = [
    {name = "sobulik", email = "<69842563+sobulik@users.noreply.github.com>"},
    {name = "janhlama", email = "<mail@janhalama.cz>"},
]
dependencies = [
    "Cerberus==1.3.5",
    "PyYAML==6.0.2",
    "termtables==0.2.4",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false


[tool.pdm.scripts]
test = "./test.py"
check = { composite = [
    #"lint",
    "test"
] }
