[project]
name = "hooshek"
version = "2.0"
description = "A CLI application for managing time based sport competitions"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "sobulik"}
]
maintainers = [
    {name = "janhlama", email = "<mail@janhalama.cz>"}
]
keywords = ["sport", "race", "timer"]
dependencies = [
    "Cerberus==1.3.5",
    "PyYAML==6.0.2",
    "termtables==0.2.4",
]
license = {text = "MIT"}
