[project]
name = "hooshek"
version = "2.0"
description = "A CLI application for managing time based sport competitions"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "sobulik"}
]
maintainers = [
    {name = "janhalama", email = "<mail@janhalama.cz>"}
]
keywords = ["sport", "race", "timer"]
dependencies = [
    "cerberus~=1.3.5",
    "pyyaml~=6.0.2",
    "termtables~=0.2.4",
]
license = {text = "MIT"}
